--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "url",
   "version": "1.0.0",
   "main": "url.js",
-  "scripts": {},
+  "scripts": {
+    "dev": "node --watch url.js",
+    "start": "node url.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
