--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "url",
   "version": "1.0.0",
   "main": "url.js",
+  "type":"module",
   "scripts": {
     "dev": "node --watch url.js",
     "start": "node url.js"
